--- a/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
@@ -50,5 +50,11 @@
     <ClCompile Include="반복되는 단어찾기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="안전한 타입변환.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="안전하지 않은 타입변환.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
