--- a/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClCompile Include="값에 의한 전달.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="상수 참조에 의한 전달.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
